# xcrap-python

./: .gitignore  README.md  full_test.py  pyproject.toml  test_model.py
__tests__/: main.py
tests/clients/: test_httpx.py
tests/core/: test_decryptor.py  test_http_client_base.py  test_http_response.py
tests/extractor/: test_html_extraction_model.py  test_html_parser.py  test_json_extraction.py  test_query_builders.py  test_source_parser.py
tests/factory/: test_client_factory.py  test_parsing_model_factory.py
tests/parser/: html_extraction_model.py
tests/utils/: test_decryption.py  test_resolve.py
xcrap/: __init__.py
xcrap/clients/: __init__.py  httpx.py
xcrap/core/: __init__.py  decryptor.py  http_client.py  http_client_base.py  http_response.py
xcrap/extractor/: __init__.py  extraction_model.py  extracton_model.py  html_extraction_model.py  html_parser.py  json_extraction_model.py  json_parser.py  query_builders.py  source_parser.py
xcrap/factory/: __init__.py  client_factory.py  extraction_model_factory.py  extractor_factory.py  parsing_model_factory.py
xcrap/utils/: constants.py  decryption.py  resolve.py
