[tool.poetry]
name = "xcrap"
version = "0.0.1"
description = "A modern, declarative, and modular web scraping framework for Python."
authors = ["Marcuth <contact@marcuth.dev>"]
readme = "README.md"
repository = "https://github.com/Xcrap-Cloud/xcrap-python"
keywords = ["scraping", "crawler", "pydantic", "parsel", "html"]


[tool.poetry.dependencies]
python = "^3.12"
parsel = "^1.11.0"
jmespath = "^1.1.0"
httpx = "^0.28.1"
pydantic = "^2.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
