[tool.poetry]
name = "xcrap"
version = "0.0.1"
description = "A modern, declarative, and modular web scraping framework for Python."
authors = ["Marcuth <contact@marcuth.dev>"]
readme = "README.md"
repository = "https://github.com/Xcrap-Cloud/xcrap-python"
keywords = ["scraping", "crawler", "pydantic", "parsel", "html"]


[tool.poetry.dependencies]
python = "^3.12"
parsel = "^1.11.0"
jmespath = "^1.1.0"
httpx = "^0.28.1"
pydantic = "^2.12.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.2"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 134
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["xcrap"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
combine-as-imports = true